# Recipe-Box

./: db.sqlite3  pyproject.toml
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20200602_1700.py  0003_recipeitem_favorite.py  0004_auto_20200603_0119.py  0005_auto_20200603_0129.py  0006_auto_20200603_0140.py  0007_recipeitem_date.py
recipe/static/css/: index.css
recipe/templates/: author_details.html  author_form.html  index.html  recipe_details.html  recipe_form.html
recipebox/: settings.py
